--- a/app/src/main/res/layout/content_welcome_dua.xml
+++ b/app/src/main/res/layout/content_welcome_dua.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -35,7 +34,7 @@
             <ImageView
                 android:id="@+id/iv_gbr1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="240dp" />
 
             <TextView
                 android:id="@+id/tv_deskripsi2"
@@ -51,7 +50,7 @@
             <ImageView
                 android:id="@+id/iv_gbr2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="240dp" />
 
         </LinearLayout>
     </ScrollView>
